enable modrinth update checking